# directx_math

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  regex.txt  template.txt  test.sh
.github/workflows/: test.yml
benches/: collision.rs  matrix.rs  support.rs  vector.rs
benchmarks/: Cargo.toml
benchmarks/benches/: quaternion.rs
etc/: regex.txt  template.txt
src/: collision.rs  convert.rs  globals.rs  lib.rs  matrix.rs  misc.rs  packed_vector.rs  vector.rs
tools/docs/: Cargo.toml
tools/neon_intrinsics/: Cargo.toml
tools/neon_intrinsics/src/: main.rs
