[package]
name = "directx_math"
version = "0.1.0"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
description = "A rust translation of DirectXMath, a SIMD linear algebra library for use in games and graphics apps."
keywords = ["math", "simd", "matrix", "vector", "quaternion"]
categories = ["mathematics", "game-development", "graphics"]
repository = "https://github.com/aloucks/directx_math"
license = "MIT"
readme = "README.md"

[features]
# Disable specific intrinsics for testing
no_sse3 = []
no_sse4 = []
no_avx = []
no_fma = []
no_avx2 = []

# Disable all intrinsics
no_intrinsics = ["no_sse3", "no_sse4", "no_avx", "no_fma", "no_avx2"]

# Prefer intrinsics that may perform better on intel CPUs
favor_intel = []

# Enable specialization for trait based vector swizzle and permute.
# This is a nightly-only feature and is ignored on the stable channel.
specialization = []

# Cargo does not support optional dev-dependencies. We specify these
# here as regular, but optional, dependencies; and they are only used
# for benchmarks. This allows tests to run without compiling all of
# the dependencies for criterion.
#
# cargo --bench --features benchmarks
benchmarks = ["criterion", "pcg", "rand_core"]

[dependencies]
# NOTE: these are only used for benchmarks
# https://github.com/rust-lang/cargo/issues/1596
criterion = { version = "0.3", optional = true }
pcg = { version = "3.0", optional = true }
rand_core = { version = "0.5", optional = true }

[[bench]]
name = "quaternion"
harness = false

[[bench]]
name = "matrix"
harness = false

[[bench]]
name = "vector"
harness = false

[[bench]]
name = "collision"
harness = false
