[package]
name = "directx_math"
version = "0.2.1"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
description = "A rust translation of DirectXMath, a SIMD linear algebra library for use in games and graphics apps."
keywords = ["math", "simd", "matrix", "vector", "quaternion"]
categories = ["mathematics", "game-development", "graphics"]
repository = "https://github.com/aloucks/directx_math"
license = "MIT"
readme = "README.md"
exclude = ["etc", "benchmarks", ".github"]

[features]
# Disable specific intrinsics for testing
no_sse3 = []
no_sse4 = []
no_avx = []
no_f16c = []
no_fma = []
no_avx2 = []
no_neon = []

# Disable all intrinsics
no_intrinsics = ["no_sse3", "no_sse4", "no_avx", "no_f16c", "no_fma", "no_avx2", "no_neon"]

# Prefer intrinsics that may perform better on intel CPUs
favor_intel = []

# Enable specialization for trait based vector swizzle and permute.
# This is a nightly-only feature and is ignored on the stable channel.
specialization = []

default = ["no_neon"]

[workspace]
members = ["benchmarks", "tools/docs"]
